--- a/src/resource/html/home.html
+++ b/src/resource/html/home.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="./src/resource/css/basic.css">
         <script type="text/javascript" src="./src/resource/js/protect.js" defer></script>  
         <script src="./src/resource/js/hydra-synth.js"></script>  
+        <script src="/socket.io/socket.io.js"></script>
        
         
         <meta name="apple-mobile-web-app-title" content="Live setup Vitreous Spaghetti">
