--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Live setup Vitreous Spaghetti</title>
+    <title>Digital Mixer Vitreous</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,19 +14,18 @@
     <script src="./src/resource/js/hydra-synth.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="lib/codemirror.js"></script>
-    <link rel="stylesheet" href="lib/codemirror.css">
     <script src="mode/javascript/javascript.js"></script>
     <link rel="stylesheet" href="/dist/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/codemirror.css">
 
-
-    <link rel="stylesheet" href="./src/resource/css/basic.css">
     <script src="./src/resource/js/mixer.js" defer></script>
+    <link rel="stylesheet" href="./src/resource/css/basic.css">
 
-    <meta name="apple-mobile-web-app-title" content="Live setup Vitreous Spaghetti">
+
+    <meta name="apple-mobile-web-app-title" content="Live setup Vitreous">
     <meta name="application-name" content="A PROJECT BY EMILIANO BRAZZOLI AKA VITREOUS">
     <meta name="description" content="live console for visual">
     <meta property="og:locale" content="it_IT">
-
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Live setup Vitreous Spaghetti)">
@@ -40,11 +39,6 @@
     <link href='https://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
     <div class="container">
         <div class="row">
-            <div class="side col-md-12">
-                <div style="text-align:center" class="side col-md-4">
-                    <button style="width:90%" id="run" class="btn btn-primary"> Anteprima </button>
-                </div>
-            </div>
             <div class="row">
                 <div class="side col-md-8">
                     <textarea id="codejs">
@@ -66,6 +60,20 @@
                     width: 100%;
                     height: 100%;  
                     aspect-ratio: auto 100 / 80;"> </canvas>
+                </div>
+            </div>
+            <div class="row">
+                <div class="side col-md-12">
+                    <div style="text-align:center" class="side col-md-4">
+                        <button style="width:90%" id="run" class="btn btn-primary"> Anteprima </button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="side col-md-12">
+                    <div style="text-align:center" class="side col-md-4">
+                        <button style="width:90%" id="save" class="btn btn-primary"> Salva </button>
+                    </div>
                 </div>
             </div>
         </div>
