--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -121,6 +121,20 @@
                         <button style="width:90%" id="7" onclick="selectChannelLoad('7')" class="btn btn-primary">7</button>
                     </div>
                 </div>
+                <div class="row spacingRow" >
+                    <div style="text-align:center" class=" col-3">
+                        <button style="width:90%" id="8" onclick="selectChannelLoad('8')" class="btn btn-primary">8</button>
+                    </div>
+                    <div style="text-align:center" class=" col-3">
+                        <button style="width:90%" id="9" onclick="selectChannelLoad('9')" class="btn btn-primary">9</button>
+                    </div>
+                    <div style="text-align:center" class=" col-3">
+                        <button style="width:90%" id="10" onclick="selectChannelLoad('10')" class="btn btn-primary">10</button>
+                    </div>
+                    <div style="text-align:center" class=" col-3">
+                        <button style="width:90%" id="11" onclick="selectChannelLoad('11')" class="btn btn-primary">11</button>
+                    </div>
+                </div>
                 <div class="row spacingRow">
                     <div style="text-align:center" class=" col-3">
                         <button style="width:90%" id="save" onclick="selectActionExec('save')" class="btn btn-primary">Save</button>
