setted right hydra asset

--- a/src/resource/html/live.html
+++ b/src/resource/html/live.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
         
-        <script src="./src/resource/js/hydra-synth.js"></script>  
+        <script src="/dist/hydra-synth.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         
         <script type="text/javascript" src="./src/resource/js/live.js" defer></script>  
