--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
 
 
-    <script src="./src/resource/js/hydra-synth.js"></script>
+    <script src="/dist/hydra-synth.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="lib/codemirror.js"></script>
     <script src="mode/javascript/javascript.js"></script>
@@ -33,34 +33,7 @@
     <meta property="og:description" content="live console for visual">
     <meta property="og:site_name" content="A PROJECT BY EMILIANO BRAZZOLI AKA VITREOUS">
 
-</head>
-<style>
-    div.height100 {
-        height: 100%;
-    }
-    div.height90 {
-        height: 90%;
-    }
-    .CodeMirror{
-        min-height: 100%;
-    }
-    .spacingRow{
-        padding: 10px 0px;;
-    }
-    .code{
-        background: #282a36;
-    }
-    .mix{
-        background: #505050;
-    }
-    .tv{ 
-        padding-top: 10px;
-    }
-    .tv #hydra-canvas{
-        border: 3px solid white;
-        background: black;
-    }
-</style>
+</head> 
 <body style="margin: 0;" >
 
     <div id="hydra-ui" class="height100" style="position: absolute;">
