--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -124,6 +124,11 @@
                         <button style="width:90%" id="live"  onclick="window.open('./live','_blank')" class="btn btn-primary">Live</button>
                     </div>
                 </div>
+                <div class="row spacingRow">
+                    <div style="text-align:left" class=" col-12">
+                        F12 for log error in IRL
+                    </div>  
+                </div>
                 <!--
                 <div class="row">
                     <div style="text-align:center" class=" col-3">
