new fullsize live source

--- a/src/resource/html/home.html
+++ b/src/resource/html/home.html
@@ -42,12 +42,13 @@
             </div>
         </div>
         <div class="container-fluid">
-            <div class="row">
+            <div class="row"> 
+
                 <div style="text-align:center" class=" col-3">
                     <button style="width:90%" id="3" onclick="location.href='./mixer'" class="btn btn-primary"> GO TO MIXER </button>
                 </div> 
                 <div style="text-align:center" class=" col-3">
-                    <button style="width:90%" id="4"  onclick="window.open('./live','_blank')" class="btn btn-primary"> GO TO LIVE SOURCE</button>
+                    <button style="width:90%" id="4"  onclick="window.open('./live','winname','directories=no,titlebar=no,toolbar=no,location=no,status=no,menubar=no,scrollbars=no,resizable=no,width=400,height=350')" class="btn btn-primary"> GO TO LIVE SOURCE</button>
                 </div>
             </div>
         </div>
