--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -108,6 +108,20 @@
                         <button style="width:90%" id="11" onclick="selectChannelLoad('11')" class="btn btn-primary">11</button>
                     </div>
                 </div>
+                <div class="row spacingRow" >
+                    <div style="text-align:center" class=" col-3">
+                        <button style="width:90%" id="12" onclick="selectChannelLoad('12')" class="btn btn-primary">12</button>
+                    </div>
+                    <div style="text-align:center" class=" col-3">
+                        <button style="width:90%" id="13" onclick="selectChannelLoad('13')" class="btn btn-primary">13</button>
+                    </div>
+                    <div style="text-align:center" class=" col-3">
+                        <button style="width:90%" id="14" onclick="selectChannelLoad('14')" class="btn btn-primary">14</button>
+                    </div>
+                    <div style="text-align:center" class=" col-3">
+                        <button style="width:90%" id="15" onclick="selectChannelLoad('15')" class="btn btn-primary">15</button>
+                    </div>
+                </div>
                 <div class="row spacingRow">
                     <div style="text-align:center" class=" col-3">
                         <button style="width:90%" id="save" onclick="selectActionExec('save')" class="btn btn-primary">Save</button>
@@ -121,7 +135,7 @@
                         <button style="width:90%" id="api" onclick="window.open(apiLink,'_blank')" class="btn btn-primary">Api</button>
                     </div> 
                     <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="live"  onclick="window.open('./live','_blank')" class="btn btn-primary">Live</button>
+                        <button style="width:90%" id="4"  onclick="window.open('./live','winname','directories=no,titlebar=no,toolbar=no,location=no,status=no,menubar=no,scrollbars=no,resizable=no,width=400,height=350')" class="btn btn-primary"> GO TO LIVE SOURCE</button>
                     </div>
                 </div>
                 <div class="row spacingRow">
