--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -135,7 +135,7 @@
                         <button style="width:90%" id="api" onclick="window.open(apiLink,'_blank')" class="btn btn-primary">Api</button>
                     </div> 
                     <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="4"  onclick="window.open('./live','winname','directories=no,titlebar=no,toolbar=no,location=no,status=no,menubar=no,scrollbars=no,resizable=no,width=400,height=350')" class="btn btn-primary"> GO TO LIVE SOURCE</button>
+                        <button style="width:90%" id="4"  onclick="window.open('./live','winname','directories=no,titlebar=no,toolbar=no,location=no,status=no,menubar=no,scrollbars=no,resizable=no,width=400,height=350')" class="btn btn-primary"> Live</button>
                     </div>
                 </div>
                 <div class="row spacingRow">
