--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -66,60 +66,77 @@
                     </div>
                     
                 </div>
-                <div class="row spacingRow" >
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="0" onclick="selectChannelLoad('0')" class="btn btn-primary">0</button>
+                
+                <div class="multychannel">
+                    <div class="row spacingRow" >
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="0" onclick="selectChannelLoad('0')" class="btn btn-primary">0</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="1" onclick="selectChannelLoad('1')" class="btn btn-primary">1</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="2" onclick="selectChannelLoad('2')" class="btn btn-primary">2</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="3" onclick="selectChannelLoad('3')" class="btn btn-primary">3</button>
+                        </div>
                     </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="1" onclick="selectChannelLoad('1')" class="btn btn-primary">1</button>
+                    <div class="row spacingRow" >
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="4" onclick="selectChannelLoad('4')" class="btn btn-primary">4</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="5" onclick="selectChannelLoad('5')" class="btn btn-primary">5</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="6" onclick="selectChannelLoad('6')" class="btn btn-primary">6</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="7" onclick="selectChannelLoad('7')" class="btn btn-primary">7</button>
+                        </div>
                     </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="2" onclick="selectChannelLoad('2')" class="btn btn-primary">2</button>
+                    <div class="row spacingRow" >
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="8" onclick="selectChannelLoad('8')" class="btn btn-primary">8</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="9" onclick="selectChannelLoad('9')" class="btn btn-primary">9</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="10" onclick="selectChannelLoad('10')" class="btn btn-primary">10</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="11" onclick="selectChannelLoad('11')" class="btn btn-primary">11</button>
+                        </div>
                     </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="3" onclick="selectChannelLoad('3')" class="btn btn-primary">3</button>
+                    <div class="row spacingRow" >
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="12" onclick="selectChannelLoad('12')" class="btn btn-primary">12</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="13" onclick="selectChannelLoad('13')" class="btn btn-primary">13</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="14" onclick="selectChannelLoad('14')" class="btn btn-primary">14</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="15" onclick="selectChannelLoad('15')" class="btn btn-primary">15</button>
+                        </div>
                     </div>
-                </div>
-                <div class="row spacingRow" >
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="4" onclick="selectChannelLoad('4')" class="btn btn-primary">4</button>
-                    </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="5" onclick="selectChannelLoad('5')" class="btn btn-primary">5</button>
-                    </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="6" onclick="selectChannelLoad('6')" class="btn btn-primary">6</button>
-                    </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="7" onclick="selectChannelLoad('7')" class="btn btn-primary">7</button>
-                    </div>
-                </div>
-                <div class="row spacingRow" >
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="8" onclick="selectChannelLoad('8')" class="btn btn-primary">8</button>
-                    </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="9" onclick="selectChannelLoad('9')" class="btn btn-primary">9</button>
-                    </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="10" onclick="selectChannelLoad('10')" class="btn btn-primary">10</button>
-                    </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="11" onclick="selectChannelLoad('11')" class="btn btn-primary">11</button>
-                    </div>
-                </div>
-                <div class="row spacingRow" >
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="12" onclick="selectChannelLoad('12')" class="btn btn-primary">12</button>
-                    </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="13" onclick="selectChannelLoad('13')" class="btn btn-primary">13</button>
-                    </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="14" onclick="selectChannelLoad('14')" class="btn btn-primary">14</button>
-                    </div>
-                    <div style="text-align:center" class=" col-3">
-                        <button style="width:90%" id="15" onclick="selectChannelLoad('15')" class="btn btn-primary">15</button>
+                    <div class="row spacingRow" >
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="12" onclick="selectChannelLoad('16')" class="btn btn-primary">16</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="13" onclick="selectChannelLoad('17')" class="btn btn-primary">17</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="14" onclick="selectChannelLoad('18')" class="btn btn-primary">18</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="15" onclick="selectChannelLoad('19')" class="btn btn-primary">19</button>
+                        </div>
                     </div>
                 </div>
                 <div class="row spacingRow">
