--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -19,6 +19,10 @@
     <link rel="stylesheet" href="/theme/dracula.css">
     <link rel="stylesheet" href="/dist/bootstrap.min.css">
 
+    <script src="./src/resource/addon/show-hint.js" defer></script>
+    <script src="./src/resource/addon/javascript-hint.js" defer></script>
+    <link rel="stylesheet" href="./src/resource/addon/show-hint.css" defer></script>
+
     <script src="./src/resource/js/mixer.js" defer></script>
     <link rel="stylesheet" href="./src/resource/css/basic.css">
 
