--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -142,6 +142,20 @@
                             <button style="width:90%" id="19" onclick="selectChannelLoad('19')" class="btn btn-primary">19</button>
                         </div>
                     </div>
+                    <div class="row spacingRow" >
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="20" onclick="selectChannelLoad('20')" class="btn btn-primary">20</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="21" onclick="selectChannelLoad('21')" class="btn btn-primary">21</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="22" onclick="selectChannelLoad('22')" class="btn btn-primary">22</button>
+                        </div>
+                        <div style="text-align:center" class=" col-3">
+                            <button style="width:90%" id="23" onclick="selectChannelLoad('23')" class="btn btn-primary">23</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="row spacingRow">
                     <div style="text-align:center" class=" col-3">
