--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -11,25 +11,23 @@
 
 
     <script src="/dist/hydra-synth.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="lib/codemirror.js"></script>
-    <script src="mode/javascript/javascript.js"></script>
+    <script src="/socket.io/socket.io.js"></script>  
 
-    <script src="./src/resource/addon/show-hint.js" defer></script>
-    <script src="./src/resource/addon/javascript-hint.js" defer></script>
-    <link rel="stylesheet" href="./src/resource/addon/show-hint.css" defer>
-    </script>
-
+    <!-- <script src="lib/codemirror.js"></script>
+    <script src="mode/javascript/javascript.js"></script> 
     <link rel="stylesheet" href="/lib/codemirror.css">
     <link rel="stylesheet" href="/theme/dracula.css"> 
+    <script src="./src/resource/addon/show-hint.js" defer></script>
+    <script src="./src/resource/addon/javascript-hint.js" defer></script>
+    <link rel="stylesheet" href="./src/resource/addon/show-hint.css" defer>-->
+
+    </script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <script src="./src/resource/js/hydraManager.js" defer></script>
-    <script src="./src/resource/js/codeMirrorManager.js" defer></script>
-    <script src="./src/resource/js/macroManager.js" defer></script>
+    <script src="./src/resource/js/hydraManager.js" defer></script>  
     <script src="./src/resource/js/deckManager.js" defer type="module" defer></script>
-
     <link rel="stylesheet" href="./src/resource/css/basic.css">
 
 
@@ -63,9 +61,15 @@
                               Function
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                              <li><a class="dropdown-item" onclick="insertText('zzzzz')">Source</a></li>
+                              <li><a class="dropdown-item" href="#">Geometry</a></li>
+                              <li><a class="dropdown-item" href="#">Color</a></li>
+                              <li><a class="dropdown-item" href="#">Blend</a></li>
+                              <li><a class="dropdown-item" href="#">Modulate</a></li>
+                              <li><a class="dropdown-item" href="#">External Sources</a></li>
+                              <li><a class="dropdown-item" href="#">Synth Settings</a></li>
+                              <li><a class="dropdown-item" href="#">Array</a></li>
+                              <li><a class="dropdown-item" href="#">Audio</a></li>
                             </ul>
                           </li>
                           <li class="nav-item">
@@ -78,7 +82,7 @@
                             <a class="nav-link" href="#">Transition</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="/about">About</a>
                           </li>
                         </ul>
                       </div>
@@ -88,9 +92,7 @@
             <div class="row height97">
                 <div class=" col-md-8 height100 code">
                     <div class="row height90 ">
-                        <div class="col-12 height100">
-                            <textarea id="codejs">
-                            </textarea>
+                        <div class="col-12 height100" id="codejs"> 
                         </div>
                     </div>
                     <div class="row spacingRow  justify-content-end ">
