--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -2,162 +2,147 @@
 <html lang="it">
 
 <head>
-    <title>Digital Mixer Vitreous</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+  <title>Digital Mixer Vitreous</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
 
 
-    <script src="/dist/hydra-synth.js"></script>
-    <script src="/socket.io/socket.io.js"></script>  
+  <script src="/dist/hydra-synth.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
 
-    <!-- <script src="lib/codemirror.js"></script>
-    <script src="mode/javascript/javascript.js"></script> 
-    <link rel="stylesheet" href="/lib/codemirror.css">
-    <link rel="stylesheet" href="/theme/dracula.css"> 
-    <script src="./src/resource/addon/show-hint.js" defer></script>
-    <script src="./src/resource/addon/javascript-hint.js" defer></script>
-    <link rel="stylesheet" href="./src/resource/addon/show-hint.css" defer>-->
-
-    </script>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <script src="./src/resource/js/hydraManager.js" defer></script>  
-    <script src="./src/resource/js/deckManager.js" defer type="module" defer></script>
-    <link rel="stylesheet" href="./src/resource/css/basic.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+ 
+  <script src="./src/resource/js/deckManager.js" defer type="module" defer></script>
+  <link rel="stylesheet" href="./src/resource/css/basic.css">
 
 
-    <meta name="apple-mobile-web-app-title" content="Live setup Vitreous">
-    <meta name="application-name" content="A PROJECT BY EMILIANO BRAZZOLI AKA VITREOUS">
-    <meta name="description" content="live console for visual">
-    <meta property="og:locale" content="it_IT">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Live setup Vitreous Spaghetti)">
-    <meta property="og:description" content="live console for visual">
-    <meta property="og:site_name" content="A PROJECT BY EMILIANO BRAZZOLI AKA VITREOUS">
+  <meta name="apple-mobile-web-app-title" content="Live setup Vitreous">
+  <meta name="application-name" content="A PROJECT BY EMILIANO BRAZZOLI AKA VITREOUS">
+  <meta name="description" content="live console for visual">
+  <meta property="og:locale" content="it_IT">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Live setup Vitreous Spaghetti)">
+  <meta property="og:description" content="live console for visual">
+  <meta property="og:site_name" content="A PROJECT BY EMILIANO BRAZZOLI AKA VITREOUS">
 
 </head>
 
 <body style="margin: 0;">
-
-    <div id="hydra-ui" class="height100" style="position: absolute;">
-        <div class="container-fluid height100">
-
-            <div class="row height3">
-                <nav class="navbar  navbar-dark bg-dark navbar-custom navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-                      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <ul class="navbar-nav">
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Channel</a>
-                          </li>
-                          <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Function
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <li><a class="dropdown-item" onclick="insertText('zzzzz')">Source</a></li>
-                              <li><a class="dropdown-item" href="#">Geometry</a></li>
-                              <li><a class="dropdown-item" href="#">Color</a></li>
-                              <li><a class="dropdown-item" href="#">Blend</a></li>
-                              <li><a class="dropdown-item" href="#">Modulate</a></li>
-                              <li><a class="dropdown-item" href="#">External Sources</a></li>
-                              <li><a class="dropdown-item" href="#">Synth Settings</a></li>
-                              <li><a class="dropdown-item" href="#">Array</a></li>
-                              <li><a class="dropdown-item" href="#">Audio</a></li>
-                            </ul>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Sequence</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Option</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Transition</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="/about">About</a>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </nav>
+  <div id="hydra-ui" class="height100" style="position: absolute;">
+    <div class="container-fluid height100">
+      <div class="row height3">
+        <nav class="navbar  navbar-dark bg-dark navbar-custom navbar-expand navbar-light bg-light">
+          <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Channel</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    Function
+                  </a>
+                  <ul class="dropdown-menu" id="functionManager" aria-labelledby="navbarDropdownMenuLink">
+                    
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Sequence</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Option</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Transition</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/about">About</a>
+                </li>
+              </ul>
             </div>
-            <div class="row height97">
-                <div class=" col-md-8 height100 code">
-                    <div class="row height90 ">
-                        <div class="col-12 height100" id="codejs"> 
-                        </div>
-                    </div>
-                    <div class="row spacingRow  justify-content-end ">
-                        <div style="text-align:center" class=" col-3  ">
-                            <input type="text" id="channelName" name="channelName">
-                        </div>
-                        <div style="text-align:center" class=" col-3  ">
-                            <button style="width:90%" id="prev" onclick="selectActionExec('prev')"
-                                class="btn btn-primary">Show</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mix">
-                    <div class="row">
-                        <div class=" tv col-12">
-                            <canvas id="hydra-canvas" style="
+          </div>
+        </nav>
+      </div>
+      <div class="row height97">
+        <div class=" col-md-8 height100 code">
+          <div class="row height90 ">
+            <div class="col-12 height100" id="codejs">
+            </div>
+          </div>
+          <div class="row spacingRow  justify-content-end ">
+            <div style="text-align:center" class=" col-3  ">
+              <input type="text" id="channelName" name="channelName">
+            </div>
+            <div style="text-align:center" class=" col-3  ">
+              <button style="width:90%" id="prev" onclick="selectActionExec('prev')"
+                class="btn btn-primary">Show</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mix">
+          <div class="row">
+            <div class=" tv col-12">
+              <canvas id="hydra-canvas" style="
                             width: 100%;
                             height: 100%;  
                             aspect-ratio: auto 100 / 80;"> </canvas>
-                        </div>
-                    </div>
-
-                    <div class="multychannel" title="change the channel workplace" id="multychannel">
-                    </div>
-
-                    <div class="multychannel" title="change the channel workplace" id="function">
-                        <div class="row spacingRow">
-                            <div style="text-align:center" class=" col-3">
-                                <button style="width:90%" id="save" title="save the channel in the workplace"
-                                    onclick="selectActionExec('save')" class="btn btn-primary">Save</button>
-                            </div>
-                            <div style="text-align:center" class=" col-6">
-                                <button style="width:90%" id="saverun"
-                                    title="save the channel in the workplace and then send to live"
-                                    onclick="selectActionExec('saverun')" class="btn btn-primary">Save and Run</button>
-                            </div>
-                        </div>
-                        <div class="row spacingRow">
-                            <div style="text-align:center" class=" col-3">
-                                <button style="width:90%" id="Autosave"
-                                    title="active the autosave mode when you change channel in workplace"
-                                    onclick="autosave()" class="btn btn-primary"> Autosave</button>
-                            </div>
-                            <div style="text-align:center" class=" col-3">
-                                <button style="width:90%" id="api" title="show api of hydra"
-                                    onclick="window.open(apiLink,'_blank')" class="btn btn-primary">Api</button>
-                            </div>
-                            <div style="text-align:center" class=" col-3">
-                                <button style="width:90%" id="live" title="show live source"
-                                    onclick="window.open('./live','winname','directories=no,titlebar=no,toolbar=no,location=no,status=no,menubar=no,scrollbars=no,resizable=no,width=400,height=350')"
-                                    class="btn btn-primary"> Live</button>
-                            </div>
-                        </div>
-                        <div class="row spacingRow">
-                            <div style="text-align:left" class=" col-12">
-                                F12 for log error in IRL for the code in your workplace
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
             </div>
-            <script id="script" type="text/javascript">
-            </script>
+          </div>
+
+          <div class="multychannel" title="change the channel workplace" id="multychannel">
+          </div>
+
+          <div class="multychannel" title="change the channel workplace" id="function">
+            <div class="row spacingRow">
+              <div style="text-align:center" class=" col-3">
+                <button style="width:90%" id="save" title="save the channel in the workplace"
+                  onclick="selectActionExec('save')" class="btn btn-primary">Save</button>
+              </div>
+              <div style="text-align:center" class=" col-6">
+                <button style="width:90%" id="saverun" title="save the channel in the workplace and then send to live"
+                  onclick="selectActionExec('saverun')" class="btn btn-primary">Save and Run</button>
+              </div>
+            </div>
+            <div class="row spacingRow">
+              <div style="text-align:center" class=" col-3">
+                <button style="width:90%" id="Autosave"
+                  title="active the autosave mode when you change channel in workplace" onclick="autosave()"
+                  class="btn btn-primary"> Autosave</button>
+              </div>
+              <div style="text-align:center" class=" col-3">
+                <button style="width:90%" id="api" title="show api of hydra" onclick="window.open(apiLink,'_blank')"
+                  class="btn btn-primary">Api</button>
+              </div>
+              <div style="text-align:center" class=" col-3">
+                <button style="width:90%" id="live" title="show live source"
+                  onclick="window.open('./live','winname','directories=no,titlebar=no,toolbar=no,location=no,status=no,menubar=no,scrollbars=no,resizable=no,width=400,height=350')"
+                  class="btn btn-primary"> Live</button>
+              </div>
+            </div>
+            <div class="row spacingRow">
+              <div style="text-align:left" class=" col-12">
+                F12 for log error in IRL for the code in your workplace
+              </div>
+            </div>
+          </div>
+
         </div>
+      </div>
+      <script id="script" type="text/javascript">
+      </script>
+    </div>
+
+    <div class="modal fade" id="modalPanelHere" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    </div>
 </body>
 
 </html>
