aggiornamento funzioni e user expirience

--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -43,27 +43,40 @@
           <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Channel</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="dropdownMenuButtonOption" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false"> 
+                    Visual Deck
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonOption">
+                    <li><a class="dropdown-item" onclick="autosave()">Autosave</a></li>
+                    <li><a class="dropdown-item" onclick="selectActionExec('save')" >Save</a></li>
+                    <li><a class="dropdown-item" onclick="selectActionExec('saverun')" >Save and Run</a></li> 
+                    <li><a class="dropdown-item" 
+                      onclick="window.open('./live','winname','directories=no,titlebar=no,toolbar=no,location=no,status=no,menubar=no,scrollbars=no,resizable=no,width=400,height=350')">
+                      Live</a></li>
+                    <li><a class="dropdown-item" onclick="window.open(apiLink,'_blank')">Api</a></li>
+                  </ul>
                 </li>
+                <!--<li class="nav-item">
+                  <a class="nav-link" href="#">Channel</a>
+                </li>-->
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
-                    Function
+                    Hydra Function
                   </a>
                   <ul class="dropdown-menu" id="functionManager" aria-labelledby="navbarDropdownMenuLink">
                     
                   </ul>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                   <a class="nav-link" href="#">Sequence</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Option</a>
-                </li>
+                </li>-->
+                <!--
                 <li class="nav-item">
                   <a class="nav-link" href="#">Transition</a>
-                </li>
+                </li>-->
                 <li class="nav-item">
                   <a class="nav-link" href="/about">About</a>
                 </li>
@@ -89,6 +102,13 @@
           </div>
         </div>
         <div class="col-md-4 mix">
+          <div class="multychannel" title="change the channel workplace" id="function">
+            <div class="row spacingRow">
+              <div style="text-align:left" class=" col-12">
+                Preview function
+              </div>
+            </div>
+          </div>
           <div class="row">
             <div class=" tv col-12">
               <canvas id="hydra-canvas" style="
@@ -98,9 +118,16 @@
             </div>
           </div>
 
+          <div class="multychannel" title="change the channel workplace" id="function">
+            <div class="row spacingRow">
+              <div style="text-align:left" class=" col-12">
+                Channels
+              </div>
+            </div>
+          </div>
           <div class="multychannel" title="change the channel workplace" id="multychannel">
           </div>
-
+<!-- 
           <div class="multychannel" title="change the channel workplace" id="function">
             <div class="row spacingRow">
               <div style="text-align:center" class=" col-3">
@@ -128,13 +155,13 @@
                   class="btn btn-primary"> Live</button>
               </div>
             </div>
-            <div class="row spacingRow">
+           <div class="row spacingRow">
               <div style="text-align:left" class=" col-12">
                 F12 for log error in IRL for the code in your workplace
               </div>
             </div>
           </div>
-
+-->
         </div>
       </div>
       <script id="script" type="text/javascript">
