--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -49,7 +49,7 @@
                     Visual Deck
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonOption">
-                    <li><a class="dropdown-item" onclick="autosave()">Autosave</a></li>
+                    <li><a class="dropdown-item" onclick="autosave()" id="Autosave">Autosave</a></li>
                     <li><a class="dropdown-item" onclick="selectActionExec('save')" >Save</a></li>
                     <li><a class="dropdown-item" onclick="selectActionExec('saverun')" >Save and Run</a></li> 
                     <li><a class="dropdown-item" 
