--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -70,9 +70,10 @@
                     
                   </ul>
                 </li>
-                <!--<li class="nav-item">
-                  <a class="nav-link" href="#">Sequence</a>
-                </li>-->
+                <!--
+                <li class="nav-item">
+                  <a class="nav-link" onclick="Sequence()" id="Sequence"> Sequence</a>
+                </li> -->
                 <!--
                 <li class="nav-item">
                   <a class="nav-link" href="#">Transition</a>
