--- a/src/resource/html/mixer.html
+++ b/src/resource/html/mixer.html
@@ -81,6 +81,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/about">About</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" onclick="selectActionExec('showMacro')">Help</a>
+                </li>
               </ul>
             </div>
           </div>
